<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_enter_nick" >Enter nick</string>
    <string name="radio_btn_man" >Man</string>
    <string name="radio_btn_women" >Woman</string>
    <string name="hint_confirm_password" >Confirm password</string>
    <string name="btn_register" >Register</string>
    <string name="btn_login" >Login</string>
    <string name="btn_sing_up" >Sing Up</string>
    <string name="android_studio">Android Studio</string>
    <string name="app_name">ITHouse</string>
    <string name="activity_register_label">Register</string>
    <string name="title_activity_main_drawer_navigation">ITHouse</string>
    <string name="menu_item_import">Import</string>
    <string name="menu_item_gallery">Gallery</string>
    <string name="menu_item_slideshow">Slideshow</string>
    <string name="menu_item_tools">Tools</string>
    <string name="menu_group_name_communicate">Communicate</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_send">Send</string>
    <string name="menu_item_settings">Settings</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
</resources>