<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_brown"
    android:orientation="vertical"
    tools:context="com.example.zver.androidintentroom.Activity.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_text_nick_register_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:textColor="@color/color_black"
            android:hint="@string/hint_enter_nick"
            android:textAlignment="inherit" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_text_password_register_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/hint_enter_password"
            android:textAlignment="inherit"
            android:textColor="@color/color_black"
            />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_text_confirm_password_register_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/hint_confirm_password"
            android:textAlignment="inherit"
            android:textColor="@color/color_black"
            />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_btn_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_btn_man" />

        <RadioButton
            android:id="@+id/radio_btn_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_women" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/btn_register"
        android:textColor="@color/color_wight" />
</LinearLayout>
