<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_brown"
    android:orientation="vertical"
    tools:context="com.example.zver.androidintentroom.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_text_nick_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/hint_enter_nick"
            android:textColor="@color/color_black"
            />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_text_password_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"

            android:textColor="@color/color_black"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_login"
        android:textColor="@color/color_wight"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_sing_up"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sing_up"
        android:textColor="@color/color_wight"
        android:textStyle="bold" />

</LinearLayout>
